compiler/test-data/parser/errors/control/when_missing_condition.frel
module test

blueprint Bad {
    when {
        text { "hello" }
    }
}
